change in header and changes in table

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 .body{
   background-color: #e7e7e7;
+  height: auto;
 }
 .modal {
   background: rgba(0, 0, 0, 0.6);
@@ -12,7 +13,6 @@
   top: 30%;
   padding: 20px;
 }
-
 #nav {
   height: 100%;
   width: 200px;
@@ -37,18 +37,45 @@
 	 }
 
  #cointainer{
-   height: 580px;
-   border-style: solid;
-  border-color: white;
-  width:70%;
-  margin-top: 30px;
-  margin-left:20%;
-  margin-right:20%;
-  background-color: #FFFFFF;
-
+   height: 60vh;
+  width:90%;
+  margin-top: -25px;
+  margin-left:5%;
+  margin-right:5%;
   /*  position: fixed; */
    }
+   .tilesContainer1{
+   height: 22vh;
+   width:80%;
+   margin-top: 20vh;
+   margin-left:5%;
+   margin-right:20%;
+   /*  position: fixed; */
+	}
+	.tilesContainer2{
+		height: 12vh;
+		width:80%;
+		margin-top: -15vh;
+		margin-left:5%;
+		margin-right:10%;
+		/*  position: fixed; */
+		 }
+     .tilesContainer3{
+			height: 12vh;
+			float: right;
 
+			width:80%;
+			margin-top: -15vh;
+			margin-left:5%;
+			margin-right:10%;
+			/*  position: fixed; */
+			 }	 
+   .whiiteHeading{
+	   color: #FFFFFF;
+	   font-size: 14px;
+   /*  position: fixed; */
+	}
+ 
    #fromContainer{
      height: 530px;
      border-style: solid;
@@ -103,8 +130,6 @@ table.Table {
     margin-left:20%;
     margin-right:15%;
     padding-top: 150px;
-
-
   }
   button.button {
   background-color: #03fce8;
@@ -128,7 +153,7 @@ h4 {
 }
 
 .topnav{
-  height: 70px;
+  height: 60px;
   width: 100% ;
   background-color: white;
   position: absolute;
@@ -147,4 +172,22 @@ ul {
   }
 .fa-custom{
   color: #428bca;
+}
+.tiles{
+	width:25%;
+	height: 5vh;
+	margin-left: 10px;
+	border-style: none;
+	border-radius: 2px;
+}
+.otherExptiles{
+	width:25%;
+	height: 5h;
+	margin-top:-28px;
+	margin-bottom: 30px;
+	margin-right: -68px;
+	border-style: none;
+	border-radius: 2px;
+	background-color:#363738;
+
 }
