--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,9 @@
 .body{
-  background-color:#e9ecef;
   height: auto;
+  font-family:Open Sans;
+  font-weight: 400;
 }
-.modal {
-  background: rgba(0, 0, 0, 0.6);
-}
-.modal-container {
-  position: absolute;
-  width: 60%;
-  background: #ffffff;
-  left: 25%;
-  top: 30%;
-  padding: 20px;
-}
+
 #nav {
   height: 100%;
   width: 200px;
@@ -40,36 +31,12 @@
    height: 60vh;
   width:90%;
   margin-top: -25px;
-  margin-left:5%;
+  margin-left:9%;
   margin-right:5%;
   /*  position: fixed; */
    }
-   .tilesContainer1{
-   height: 22vh;
-   width:80%;
-   margin-top: 20vh;
-   margin-left:5%;
-   margin-right:20%;
-   /*  position: fixed; */
-	}
-	.tilesContainer2{
-		height: 12vh;
-		width:80%;
-		margin-top: -15vh;
-		margin-left:5%;
-		margin-right:10%;
-		/*  position: fixed; */
-		 }
-     .tilesContainer3{
-			height: 12vh;
-			float: right;
+ 
 
-			width:90%;
-			margin-top: -15vh;
-			margin-left:5%;
-			margin-right:10%;
-			/*  position: fixed; */
-			 }	
 	.breadCrumbContainer{
 
 			width:90%;
@@ -78,22 +45,7 @@
 			margin-left:5%;
 			margin-right:10%;
 	}		  
-   .whiiteHeading{
-	   color: #FFFFFF;
-	   font-size: 14px;
-   /*  position: fixed; */
-	}
  
-   #fromContainer{
-     height: 530px;
-     border-style: solid;
-    border-color: white;
-    width:70%;
-    margin-top: 30px;
-    margin-left:20%;
-    margin-right:20%;
-    background-color: #FFFFFF;
-   }
 
    .topnav input[type=text]{
      position: absolute;
@@ -107,7 +59,8 @@
      cursor: pointer;
      font-weight: bold;
      font-size: 14px;
-     color: gray;
+	 color: gray;
+
 
 }
 
@@ -119,86 +72,46 @@
     margin-left: 26px;
 }
 
-   .Table {
-  border-spacing: 20px;
-  background: #fff;
-  box-shadow: 0 1px 0 0 rgba(22, 29, 37, 0.05);
-  padding-top: 80px !important;
 
+.search_box{
+	width:70%;
+	margin-left:10%;
 }
-
-.Cell {
-  border: 1px solid #f4f6f8;
-  padding: 4px;
-  text-align: center;
-}
-
-table.Table {
-    width:70%;
-    margin-left:20%;
-    margin-right:15%;
-    padding-top: 150px;
-  }
-  button.button {
-  background-color: #03fce8;
-  color: white;
-  width: 70%;
-  padding: 15px 20px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  margin-left:15%;
-  margin-right:20%;
-  float: center;
-
-}
-.button1 {border-radius: 12px;}
-
-h4 {
-  text-align: center;
-  font-size:30px;
-}
-
 .topnav{
   height: 60px;
   width: 100% ;
-  background-color: white;
+  background-color:#54d1b4 !important;
   position: absolute;
    top: 0;
    right: 0;
    left: 0;
    z-index: 20;
-
 }
 ul {
   list-style-type: none;
 }
-.modal-header {
-  background-color: #e7e7e7 ;
-  color: black;
-  }
+
 .fa-custom{
   color: #428bca;
 }
-.tiles{
-	width:25%;
-	height: 5vh;
-	margin-left: 10px;
-	border-style: none;
-	border-radius: 2px;
-}
-.otherExptiles{
-	width:25%;
-	height: 5h;
-	margin-top:-28px;
-	margin-bottom: 30px;
-	margin-right: -68px;
-	border-style: none;
-	border-radius: 2px;
-	background-color:#363738;
 
-}
+.scrollTop {
+	position: fixed; 
+	width: 100%;
+	bottom: 20px;
+	align-items: center;
+	height: 20px;
+	justify-content: center;
+	z-index: 1000;
+	cursor: pointer;
+	animation: fadeIn 0.3s;
+	transition: opacity 0.4s;
+	opacity: 0.5;
+  }
+  
+  .scrollTop:hover{
+	opacity: 1;
+  }
 #btnSearch {
 	display: inline-flex;
 	height: 2.7rem;
@@ -207,3 +120,87 @@ ul {
 	-webkit-appearance: none;
 	justify-content: center;
   }
+  .serv{
+	display: flex;
+	flex-wrap: wrap;
+	padding-left: 0;
+  }
+  
+  .serv2  {
+	list-style: none;
+	flex: 0 0 32%;
+	margin-left:5px;
+  }
+  .product_size{
+	  display: flex;
+	flex-wrap: wrap;
+}
+.product_card{
+	padding:10px;
+	width: 280px;
+	margin-left:7px;
+
+}
+@media only screen and (max-device-width: 480px) {
+	/* .product_image{
+		height: 100vh;
+		display: flex;
+		min-height:25% !important;
+		} */
+}
+.product_image{
+height: 12vh !important;
+display: flex;
+min-height:65%;
+width:31px;
+margin: 12px;
+margin-top: 25px;
+}
+.description_text{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 5; /* number of lines to show */
+	-webkit-box-orient: vertical;
+	margin:0px 0px 30px 20px;
+	margin-top:-12px;
+}
+
+.card_title{
+	margin:0px 0px 30px 22px;
+	padding-top:20px;
+	font-weight: bold;
+	font-size:18px;
+}
+
+.h2{
+	color:white;
+	padding:10px;
+}
+.bg_info {
+	background-color:#27c8b9 !important;
+}
+a {
+    color: white !important;
+    text-decoration: none;
+	background-color: transparent;
+	font-size: 16px;
+	padding:4px;
+}
+.navbar-brand {
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.8rem !important;
+    line-height: inherit;
+    white-space: nowrap;
+}
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: .3rem 1rem !important;
+}
